Correct print statements rendering without text wrapping (Fixes #14) + Added KeyboardJS framework for an experimental feature.

--- a/client-src/css/main.css
+++ b/client-src/css/main.css
@@ -380,3 +380,12 @@
 
     transition: background-color 0.2s ease;
 }
+
+
+.print-statement-content {
+    float: left;
+}
+
+.print-statement-meta {
+    float: right;
+}
